SecretDecks Reps added
Documentation
Contentwriting
Website
Artist-Coordination

--- a/config/plugins/sourcecred/github/config.json
+++ b/config/plugins/sourcecred/github/config.json
@@ -1,1 +1,1 @@
-{"repositories": ["sourcecred-test/example-github"]}
+{"repositories": ["SecretDecks/Documentation", "SecretDecks/Contentwriting", "SecretDecks/Website", "SecretDecks/Artist-Coordination" ]}
