arcana rep having problems loading
arcana rep cancelled

--- a/config/plugins/sourcecred/github/config.json
+++ b/config/plugins/sourcecred/github/config.json
@@ -1,1 +1,1 @@
-{"repositories": ["SecretDecks/Documentation", "SecretDecks/Contentwriting", "SecretDecks/Website", "SecretDecks/Artist-Coordination", "SecrertDecks/Arcana"]}
+{"repositories": ["SecretDecks/Documentation", "SecretDecks/Contentwriting", "SecretDecks/Website", "SecretDecks/Artist-Coordination"]}
