--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -16,7 +16,8 @@
         "1CanD:874726609674965013": 2,
         "2CanDHeart:874726609725308959": 3,
         "3CanDGem:874726609767251968": 4,
-        "4CanDprescription:874726611029733458": 5
+        "4CanDprescription:874726611029733458": 5,
+        "-1CanD:874726609909870676": -1
       }
     },
     "roleWeightConfig": {
