--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -30,8 +30,8 @@
         "2CanDHeart:874726609725308959": 3,
         "3CanDGem:874726609767251968": 4,
         "4CanDprescription:874726611029733458": 5,
-        "-1CanD:874726609909870676": -1
-        "poop:895067022021509152": 0
+        "-1CanD:874726609909870676": -1,
+        "poop:895067022021509152": 0,
         "face_vomiting:895067022021509152": 0
       }
     },
