--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -7,7 +7,8 @@
     },
     "guildId": "839844883124584478",
     "includeNsfwChannels": true,
-    "propsChannels": [
+    "propsChannels": 
+    [
       "849420124007956551",
       "884143672004857936",
       "839844883124584483",
