--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -26,7 +26,8 @@
     "reactionWeightConfig": {
       "applyAveraging": false,
       "defaultWeight": 1,
-      "weights": {
+      "weights": 
+      {
         "1CanD:874726609674965013": 2,
         "2CanDHeart:874726609725308959": 3,
         "3CanDGem:874726609767251968": 4,
@@ -38,7 +39,8 @@
     },
     "roleWeightConfig": {
       "defaultWeight": 0,
-      "weights": {
+      "weights": 
+      {
         "842003562556424233": 2,
         "849414994541674597": 1
       }
