--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -7,8 +7,7 @@
     },
     "guildId": "839844883124584478",
     "includeNsfwChannels": true,
-    "propsChannels": 
-    [
+    "propsChannels": [
       "849420124007956551",
       "884143672004857936",
       "839844883124584483",
@@ -21,13 +20,12 @@
       "864211578499891241",
       "839844883124584485",
       "849424847007907840",
-      "839844883124584486",
+      "839844883124584486"
     ],
     "reactionWeightConfig": {
       "applyAveraging": false,
       "defaultWeight": 1,
-      "weights": 
-      {
+      "weights": {
         "1CanD:874726609674965013": 2,
         "2CanDHeart:874726609725308959": 3,
         "3CanDGem:874726609767251968": 4,
@@ -39,8 +37,7 @@
     },
     "roleWeightConfig": {
       "defaultWeight": 0,
-      "weights": 
-      {
+      "weights": {
         "842003562556424233": 2,
         "849414994541674597": 1
       }
