still trying to catch all rooms
added channel weights, in hope that propsChannels are then recognised...

--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -2,7 +2,17 @@
   {
     "channelWeightConfig": {
       "defaultWeight": 1,
-      "weights": {
+      "weights": {,
+	      "849420124007956551": 1.5,
+	      "884143672004857936": 1.5,
+	      "845219237336842251": 2,
+	      "857223252953661442": 2,
+	      "864585492669399050": 1.5,
+	      "839844883124584486": 0.5,
+	      "839844883124584484": 1.5,
+	      "864211578499891241": 2,
+	      "864202096613785631": 0.1
+
       }
     },
     "guildId": "839844883124584478",
