trying to catch all repos

--- a/config/plugins/sourcecred/github/config.json
+++ b/config/plugins/sourcecred/github/config.json
@@ -1,1 +1,9 @@
-{"repositories": ["SecretDecks/Documentation", "SecretDecks/Contentwriting", "SecretDecks/Website", "SecretDecks/Artist-Coordination", "SecretDecks/Arcana"]}
+{
+    "repositories": [
+        "SecretDecks/Documentation", 
+        "SecretDecks/Contentwriting", 
+        "SecretDecks/Website", 
+        "SecretDecks/Artist-Coordination", 
+        "SecretDecks/Arcana"
+    ]
+}
