--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -15,7 +15,8 @@
       }
     },
     "guildId": "839844883124584478",
-    "includeNsfwChannels": true,
+    "includeNsfwChannels": false,
+    "includePrivateChannel": true,	  
     "propsChannels": [
       "839844883124584483",
       "849420124007956551",
