--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean-all": "yarn clean && rimraf output",
     "load": "dotenv sourcecred load",
     "start": "dotenv -- sourcecred go --no-load && sourcecred serve",
-    "grain": "sourcecred grain"
+    "grain": "sourcecred grain",
     "update": "sourcecred update"
   },
   "devDependencies": {
