--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "clean-all": "yarn clean && rimraf output",
     "load": "dotenv sourcecred load",
     "start": "dotenv -- sourcecred go --no-load && sourcecred serve",
+    "serve": "sourcecred serve",
+    "graph": "sourcecred graph",
+    "score": "sourcecred credrank",
     "grain": "sourcecred grain",
+    "site": "sourcecred site",
     "update": "sourcecred update"
   },
   "devDependencies": {
