--- a/config/plugins/sourcecred/github/config.json
+++ b/config/plugins/sourcecred/github/config.json
@@ -5,5 +5,6 @@
         "SecretDecks/Website", 
         "SecretDecks/Artist-Coordination", 
         "SecretDecks/Arcana"
+        "SecretDecks/DisCo_init"
     ]
 }
