--- a/config/plugins/sourcecred/discord/config.json
+++ b/config/plugins/sourcecred/discord/config.json
@@ -16,7 +16,7 @@
     },
     "guildId": "839844883124584478",
     "includeNsfwChannels": false,
-    "includePrivateChannel": true,	  
+    "includePrivateChannels": true,	  
     "propsChannels": [
       "839844883124584483",
       "849420124007956551",
