--- a/config/plugins/sourcecred/github/config.json
+++ b/config/plugins/sourcecred/github/config.json
@@ -4,7 +4,7 @@
         "SecretDecks/Contentwriting", 
         "SecretDecks/Website", 
         "SecretDecks/Artist-Coordination", 
-        "SecretDecks/Arcana"
+        "SecretDecks/Arcana",
         "SecretDecks/DisCo_init"
     ]
 }
