--- a/config/plugins/sourcecred/github/config.json
+++ b/config/plugins/sourcecred/github/config.json
@@ -5,6 +5,7 @@
         "SecretDecks/Website", 
         "SecretDecks/Artist-Coordination", 
         "SecretDecks/Arcana",
+        "SecretDecks/Catalyst-Proposals",
         "SecretDecks/DisCo_init"
     ]
 }
